<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivImageDetail"
        android:layout_width="160dp"
        android:layout_height="220dp"
        android:src="@color/grey"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/tvTitleMovie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/title_movies"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivImageDetail"
        app:layout_constraintEnd_toStartOf="@id/ibFavorite"/>

    <ImageButton
        android:id="@+id/ibFavorite"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_favorite_border_red"
        android:background="@color/white"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvTitleMovie"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/tvReleased"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/released"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitleMovie"
        app:layout_constraintStart_toEndOf="@id/ivImageDetail"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvReleased"
        app:layout_constraintStart_toEndOf="@id/ivImageDetail"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ProgressBar
        android:id="@+id/progress_bar_detail"
        style="?android:attr/progressBarStyle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivImageDetail"/>

    <TextView
        android:id="@+id/tv_category_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_score"
        app:layout_constraintStart_toEndOf="@id/ivImageDetail"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/category_"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_category_title"
        app:layout_constraintStart_toEndOf="@id/ivImageDetail"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_tagline_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tagline"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_category"
        app:layout_constraintStart_toEndOf="@id/ivImageDetail"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_tagline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tagline_"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_tagline_title"
        app:layout_constraintStart_toEndOf="@id/ivImageDetail"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_overview_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textColor="@color/black2"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/ivImageDetail"
        app:layout_constraintStart_toStartOf="@id/ivImageDetail"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_overview_title"
        app:layout_constraintStart_toStartOf="@id/ivImageDetail"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>