<resources>
    <string name="app_name">Movie Good</string>

    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="detail_tv">Detail TV</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="favorite_tv">Favorite TV</string>

    <string name="title_movies">Title Movies</string>
    <string name="released">Released</string>
    <string name="score">Score</string>
    <string name="category">Category :</string>
    <string name="category_">category</string>
    <string name="tagline">Tagline :</string>
    <string name="tagline_">tagline</string>
    <string name="overview">Overview</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="recommendation">Recommendation</string>
    <string name="score_value">50%</string>
    <string name="no_data">No Data</string>
    <string name="no_fav_mov_data">No Favorite Movie Data</string>
    <string name="no_fav_tv_data">No Favorite TV Data</string>
    <string name="no_recommendation">No Data Recommendation</string>

    <string name="share_text">Film %s sangat menarik untuk ditonton</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>